Fix logo size on mobile

--- a/_sass/logo.scss
+++ b/_sass/logo.scss
@@ -1,6 +1,7 @@
 .logo {
   display: block;
   width: 11%;
+  min-width: 90px;
   max-width: 200px;
   margin-left: auto;
   margin-right: auto;
